--- a/src/assets/css/login.less
+++ b/src/assets/css/login.less
@@ -7,6 +7,7 @@
 }
 
 .content-wrapper {
+	position: relative;
 	width: @width;
 	height: 590px;
 	margin: 0 auto;
@@ -21,10 +22,11 @@
 }
 
 .login {
-	float: right;
-	margin-right: 75px;
+	position: absolute;
+	top: 50%;
+	right: 75px;
+	transform: translateY(-50%);
 	width: 410px;
-	margin-top: 86px;
 	padding: 40px 30px;
 	box-sizing: border-box;
 	background-color: #fff;
