--- a/src/components/page/payment/payment.css
+++ b/src/components/page/payment/payment.css
@@ -1,7 +1,10 @@
 .content {
   width: 1200px;
-  margin: 0 auto;
+  margin: 20px auto 0;
   background-color: #fff;
+  padding-bottom: 20px;
+}
+.payment {
   border: 1px solid #dfdfdf;
 }
 .payment .info {
@@ -95,107 +98,85 @@
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
 }
-/* #add-popup {
-	display: none;
-
-	.gray {
-		width: 100%;
-		height: 100%;
-		background: rgba(0, 0, 0, 0.3);
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000);
-		position: fixed;
-		top: 0;
-		left: 0;
-	}
-
-	.popup {
-		position: absolute;
-		background-color: #fff;
-	}
-
-	.popup-title {
-		padding: 0 10px;
-		height: 30px;
-		line-height: 30px;
-		background-color: #f3f3f3;
-		color: #000;
-
-		.title {
-			float: left;
-			font-weight: bold;
-		}
-
-		.delete {
-			float: right;
-
-			i {
-				display: block;
-				width: 30px;
-				height: 30px;
-				background: url('../img/qxicon.png') no-repeat -520px -385px;
-				cursor: pointer;
-			}
-
-			&:hover {
-				i {
-					background: url('../img/qxicon.png') no-repeat -520px -512px;
-				}
-
-			}
-
-		}
-
-	}
-
-	.popup-content {
-		overflow-y: auto;
-		max-height: 500px;
-		margin: 50px 100px 0 100px;
-		background-color: #fff;
-
-		p {
-			line-height: 25px;
-		}
-
-		.p1 {
-			font-size: 18px;
-		}
-
-		.p2 {
-			color: #ff0000;
-			margin-top: 10px;
-		}
-
-	}
-
-	.popup-button {
-		padding: 30px 100px;
-
-		button {
-			border: none;
-			outline: none;
-			width: 106px;
-			height: 36px;
-			line-height: 36px;
-			border-radius: 2px;
-			cursor: pointer;
-		}
-
-		.sure {
-			color: #fff;
-			background-color: @bgColor;
-			margin-right: 20px;
-		}
-
-		.cancel {
-			color: #999;
-
-			&:hover {
-				text-decoration: underline;
-			}
-
-		}
-
-	}
-
-} */
+#add-popup {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+#add-popup .gray {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+}
+#add-popup .popup {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+}
+#add-popup .popup-title {
+  padding: 0 10px;
+  height: 30px;
+  line-height: 30px;
+  background-color: #f3f3f3;
+  color: #000;
+}
+#add-popup .popup-title .title {
+  float: left;
+  font-weight: bold;
+}
+#add-popup .popup-title .delete {
+  float: right;
+}
+#add-popup .popup-title .delete i {
+  display: block;
+  width: 30px;
+  height: 30px;
+  background: url('http://localhost:8080/static/img/qxicon.png') no-repeat -520px -385px;
+  cursor: pointer;
+}
+#add-popup .popup-title .delete:hover i {
+  background: url('http://localhost:8080/static/img/qxicon.png') no-repeat -520px -512px;
+}
+#add-popup .popup-content {
+  overflow-y: auto;
+  max-height: 500px;
+  margin: 50px 100px 0 100px;
+  background-color: #fff;
+}
+#add-popup .popup-content p {
+  line-height: 25px;
+}
+#add-popup .popup-content .p1 {
+  font-size: 18px;
+}
+#add-popup .popup-content .p2 {
+  color: #ff0000;
+  margin-top: 10px;
+}
+#add-popup .popup-button {
+  padding: 30px 100px;
+}
+#add-popup .popup-button button {
+  border: none;
+  outline: none;
+  width: 106px;
+  height: 36px;
+  line-height: 36px;
+  border-radius: 2px;
+  cursor: pointer;
+}
+#add-popup .popup-button .sure {
+  color: #fff;
+  background-color: #3481d0;
+  margin-right: 20px;
+}
+#add-popup .popup-button .cancel {
+  color: #999;
+}
+#add-popup .popup-button .cancel:hover {
+  text-decoration: underline;
+}
