--- a/src/assets/css/login.less
+++ b/src/assets/css/login.less
@@ -45,6 +45,9 @@
 	}
 
 	p {
+		position: absolute;
+		left: 0;
+		top: 48px;
 		color: #ec5a47;
 		font-size: 12px;
 	}
@@ -97,6 +100,10 @@
 
 	}
 
+	.text-code {
+		position: relative;
+	}
+
 	.text-code button {
 		font-size: 14px;
 	}
@@ -106,13 +113,8 @@
 		background-color: #ccc;
 	}
 
-	.warn {
-		font-size: 12px;
-		color: #ec5a47;
-	}
-
 	.button {
-		margin-top: 20px;
+		margin-top: 30px;
 
 		button {
 			width: 100%;
